plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

def excludedModules = [
        'common', 'api-gateway', 'discovery-server', 'config-server', 'arch-rules'
]

ext {
    springBootVersion = "3.5.14"
    springCloudVersion = "2025.0.2"
    archunitVersion = "1.3.0"
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.sparta.logistics'
    version = '0.0.1-SNAPSHOT'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.14"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach{
        options.encoding = 'UTF-8'
    }
}

configure(subprojects.findAll{!excludedModules.contains(it.name)}) {
    dependencies {
        // 여기에 속한 도메인 모듈(order, user, product, slack 등)은 자동으로 common을 참조
        //ArchUnit 적용
        implementation project(':common')
        testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"
        testImplementation project(':arch-rules')

        // Validation (DTO 검증)
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // Spring Cloud (MSA 필수 통신 및 설정)
        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        implementation 'org.springframework.cloud:spring-cloud-starter-config'

        // 모니터링 (Actuator, Zipkin 분산 추적)
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'io.micrometer:micrometer-tracing-bridge-brave'
        implementation 'io.zipkin.reporter2:zipkin-reporter-brave'

        // Swagger (API 문서)
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

        // DB (전 서비스가 PostgreSQL을 사용한다면 공통으로 처리)
        runtimeOnly 'org.postgresql:postgresql'
    }
}